Ensures data source dropdown is always fullly visible

--- a/css/interface.css
+++ b/css/interface.css
@@ -191,7 +191,7 @@ header .btn,
   padding-top: 20px;
   padding-left: 15px;
   padding-right: 15px;
-  height: calc(100% - 52px);
+  height: calc(100% - 68px);
   overflow-y: auto;
   overflow-x: hidden;
 }
